cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_subdirectory ( first_program )
add_subdirectory ( var_program )
add_subdirectory ( math_program )
add_subdirectory ( comparison_program )
add_subdirectory ( logic_program )
add_subdirectory ( if_program )
add_subdirectory ( for_program )
add_subdirectory ( for2_program )
add_subdirectory ( while_program )
add_subdirectory ( dowhile_program )
add_subdirectory ( switch_program )
add_subdirectory ( array1_program )